@@ -125,7 +125,7 @@ public class CobrancaRepositoryImplTest extends AbstractRepositoryImplTest {
 		save(produtoVeja);
 
 		ProdutoEdicao produtoEdicaoVeja1 = Fixture.produtoEdicao(1L, 10,
-				14, new Long(100), BigDecimal.TEN, new BigDecimal(20),
+				14, Long.valueOf(100), BigDecimal.TEN, new BigDecimal(20),
 				"ABCDEFGHIJKLMNOPQ", produtoVeja, null, false);
 		save(produtoEdicaoVeja1);
 
